src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>This is copied over from the &quot;Type&quot; field in order to make it reportable</description>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you want to see the attachments.</inlineHelpText>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CallDurationInMinutes__c</fullName>
        <formula>CallDurationInSeconds  / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration In Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__TTG_Prime_Action_Type__c</fullName>
        <label>PRIME Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prove your value</fullName>
                </value>
                <value>
                    <fullName>Retrieve missing information</fullName>
                </value>
                <value>
                    <fullName>Insulate against competition</fullName>
                </value>
                <value>
                    <fullName>Minimize your weaknesses</fullName>
                </value>
                <value>
                    <fullName>Emphasize your strengths</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__ThirdPartyId__c</fullName>
        <label>ThirdPartyId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__ThirdPartyName__c</fullName>
        <label>Account Plan Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>DSO_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Activity_Type__c</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>contains</operation>
            <value>Eckert,Jeffcoat</value>
        </filters>
        <label>DSO Activities</label>
        <language>en_US</language>
        <sharedTo>
            <group>DAGA_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>